// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Active TouchableTag renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E7EFFA",
          "borderRadius": 36,
          "flexDirection": "row",
          "padding": 4,
          "paddingHorizontal": 8,
        },
        Array [
          Object {
            "borderWidth": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          Object {
            "borderColor": "#74a2e2",
          },
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
            },
            Object {
              "fontSize": 24,
            },
          ]
        }
      >
        Tag test
      </Text>
    </View>
  </View>
</View>
`;

exports[`Inactive TouchableTag renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E7EFFA",
          "borderRadius": 36,
          "flexDirection": "row",
          "padding": 4,
          "paddingHorizontal": 8,
        },
        Array [
          Object {
            "borderWidth": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          Object {
            "backgroundColor": "#7D82851A",
            "borderColor": "#7D82851A",
          },
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
            },
            Object {
              "fontSize": 24,
            },
          ]
        }
      >
        Tag test
      </Text>
    </View>
  </View>
</View>
`;
